Velcro test First SandBox/src/objects/Sample_Line__c.object
<CustomObject>
    <description>Sample line to generate a sample request listing</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sample Request</label>
        <referenceTo>Sample_Request__c</referenceTo>
        <relationshipLabel>Sample Lines</relationshipLabel>
        <relationshipName>Sample_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sample Line</label>
    <nameField>
        <displayFormat>SL-{000000}</displayFormat>
        <label>Samples Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>